--- a/res/drawable/ic_skip_next.xml
+++ b/res/drawable/ic_skip_next.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--  Copyright (C) 2017 The Dirty Unicorns Project
-
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
@@ -19,10 +18,14 @@
         android:viewportWidth="96.0"
         android:viewportHeight="96.0">
 
-    <path
-        android:fillColor="@color/icon_color_flashlight"
-        android:pathData="M65,47.9c0.1-0.1,0.1-0.2,0.2-0.3l0.1-0.1l0,0c0.5-0.8,0.7-1.6,0.7-2.6c0-2.8-2.2-5-5-5h-9l10-14l0,0
-c0.6-0.8,1-1.9,1-3c0-2.8-2.2-5-5-5H39c-2.4,0-4.5,1.7-4.9,4.1l0,0l-4,23.8c0,0.1,0,0.2-0.1,0.4L30,46.6l0,0c0,0.1,0,0.3,0,0.4
-c0,2.8,2.2,5,5,5h13l-9.5,20.1c-0.1,0.2-0.2,0.3-0.2,0.5l0,0.1l0,0C38.1,73.1,38,73.5,38,74c0,2.2,1.8,4,4,4c1.3,0,2.5-0.7,3.2-1.7
-l0,0l0-0.1c0,0,0-0.1,0.1-0.1L65,47.9z" />
+    <group>
+        <path
+            android:fillColor="#ffffff"
+            android:pathData="M72,20h-4c-2.2,0-4,1.8-4,4v48c0,2.2,1.8,4,4,4h4c2.2,0,4-1.8,4-4V24C76,21.8,74.2,20,72,20z" />
+        <path
+            android:fillColor="#ffffff"
+            android:pathData="M54.5,44.9L54.5,44.9L54.5,44.9c-0.3-0.2-0.5-0.3-0.7-0.4L24.7,26.6c-0.1-0.1-0.2-0.1-0.3-0.2l-0.1-0.1l0,0
+C23.9,26.1,23.5,26,23,26c-1.7,0-3,1.3-3,3v38c0,1.7,1.3,3,3,3c0.5,0,1-0.1,1.5-0.4l0,0l0.2-0.1c0,0,0,0,0,0l29.1-17.9
+c0.2-0.1,0.4-0.2,0.6-0.4l0.1-0.1v0c0.9-0.7,1.5-1.8,1.5-3.1S55.4,45.6,54.5,44.9z" />
+    </group>
 </vector>
