--- a/res/drawable/ic_skip_previous.xml
+++ b/res/drawable/ic_skip_previous.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--  Copyright (C) 2017 The Dirty Unicorns Project
-
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
@@ -18,11 +17,13 @@
         android:height="30.0dp"
         android:viewportWidth="96.0"
         android:viewportHeight="96.0">
-
-    <path
-        android:fillColor="@color/icon_color_flashlight"
-        android:pathData="M65,47.9c0.1-0.1,0.1-0.2,0.2-0.3l0.1-0.1l0,0c0.5-0.8,0.7-1.6,0.7-2.6c0-2.8-2.2-5-5-5h-9l10-14l0,0
-c0.6-0.8,1-1.9,1-3c0-2.8-2.2-5-5-5H39c-2.4,0-4.5,1.7-4.9,4.1l0,0l-4,23.8c0,0.1,0,0.2-0.1,0.4L30,46.6l0,0c0,0.1,0,0.3,0,0.4
-c0,2.8,2.2,5,5,5h13l-9.5,20.1c-0.1,0.2-0.2,0.3-0.2,0.5l0,0.1l0,0C38.1,73.1,38,73.5,38,74c0,2.2,1.8,4,4,4c1.3,0,2.5-0.7,3.2-1.7
-l0,0l0-0.1c0,0,0-0.1,0.1-0.1L65,47.9z" />
+    <group>
+        <path
+            android:fillColor="#ffffff"
+            android:pathData="M30,22h-4c-2.2,0-4,1.8-4,4v44c0,2.2,1.8,4,4,4h4c2.2,0,4-1.8,4-4V26C34,23.8,32.2,22,30,22z" />
+        <path
+            android:fillColor="#ffffff"
+            android:pathData="M71,30c-0.6,0-1.1,0.2-1.6,0.5l0,0L44,44.5v0c-1.2,0.7-2,2-2,3.4s0.8,2.8,2,3.4v0l25.3,14l0,0
+c0.5,0.3,1.1,0.5,1.7,0.5c1.7,0,3-1.3,3-3V33C74,31.3,72.7,30,71,30z" />
+    </group>
 </vector>
